style.css
*{
    margin: 0;
    padding: 0;
    font-family: Times New Roman, serif;
    box-sizing: "border-box";
}

.header{
    height: 20vh;
    width: 60%;
    padding: 0 20% 0 20%;
    background: white;
    position: relative;
}

nav{
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.pic{
    float: right;
    width: 30%;
    padding-left: 5%;
    min-width: 250px;
    max-width: 400px;
}

.nav-links{
    padding: 28px 0;
    font-size: 200%;
}

.nav-links li{
    display: inline-block;
    margin: 0 15px;
}

.nav-links li a{
    text-decoration: none;
    color: black;
    padding: 5px 0;
    position: relative;
}

.nav-links li a::after{
    content: '';
    background: #e77500;
    width: 0;
    height: 2px;
    position: absolute;
    bottom: 0;
    left: 0;
    transition: width 0.5s;
}

.nav-links li a:hover::after{
    width: 100%;
}

.name{
    color: black;
    font-size: 300%;
}

.content{
    width: 50%;
    padding-left: 25%;
    padding-right: 25%;
    font-size: 125%;
}

.section-title{
    font-size: 200%;
    padding-bottom: 2%;
    text-decoration: underline;
    text-decoration-color:black;
    text-decoration-thickness:2px;
    text-underline-offset:5px;
}

.pub-list li{
    margin-bottom:2%;
}

a{
    color: black;
}

a:hover{
    color: #e77500;
}

iframe{
    width: 100%;
    height: 60%;
    display: block;
    margin: 0 auto;
}

td {
    vertical-align: top;
    font-size: 110%;
}

@media screen and (max-width: 1000px) {
    .header{
        height: 20vh;
        width: 80vw;
        padding-left: 10vw;
        padding-right: 10vw;
        background: white;
        position: relative;
    }

    nav{
        align-items: center;
        justify-content: space-between;
    }

    .nav-links{
        padding-left: 5%;
        padding-right: 5%;
        font-size: 150%;
    }
    
    .nav-links li{
        display: block;
    }
    
    .nav-links li a{
        text-decoration: underline;
        text-decoration-thickness: 1px;
        text-underline-offset: 2px;
        color: black;
        padding: 0;
        position: relative;
    }
    
    .nav-links li a::after{
        content: '';
        background: #e77500;
        width: 0;
        height: 0;
        position: absolute;
        bottom: 0;
        left: 0;
    }
    
    .nav-links li a:hover::after{
    }

    .pic{
        margin: auto;
        display: block;
        width: 60vw;
        padding-left: 10vw;
        padding-right: 10vw;
        padding-bottom: 2.5vh;
        float: inherit;
    }

    .content {
        font-size: 110%;
        width: 80vw;
        padding-top: 1.5vh;
        padding-left: 10vw;
        padding-right: 10vw;
        padding-bottom: 2.5vh;
    }

    .pub-list li{
        margin-bottom:2vh;
    }
}

